core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/streaming.yf
---
name: streaming
graphs:
  start:
    - type: Regex
      content: "x"
      regex: "x"
      output: output
      groups:

    - type: Map
      list: "{output}"
      mapTarget: D

  D:
    - type: Echo
      put: "gid"
      value: "{{element}@gid}"

    - type: StringContains
      regex: "notimportant"
      content: "{gid}" # content :: String
      output: result
