core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/streaming.yf
---
name: streaming
graphs:
  start:
    - type: Regex
      collect: false
      streamTarget: A
      content: "x"
      regex: "x"
      groups:

  A:
    - type: Map
      list: "{output}"  # fails here
      mapTarget: D

  D:
    - type: Echo
      put: "gid"
      value: "{{element}@gid}"

    - type: StringContains
      regex: "notimportant"
      content: "{gid}"
